# bpfjailer

./: .gitignore  Cargo.toml  ENABLE_BPF_LSM.sh  README.md  check_kernel_support.sh
bpfjailer-bootstrap/: Cargo.toml
bpfjailer-bootstrap/src/: main.rs
bpfjailer-bpf/: Cargo.toml  build.rs
bpfjailer-bpf/src/: lib.rs  main.bpf.c  networking.bpf.c  path_matching.bpf.c  process_tracking.bpf.c  signed_binary.bpf.c  vmlinux.h
bpfjailer-client/: Cargo.toml
bpfjailer-client/src/: enrollment.rs  lib.rs
bpfjailer-common/: Cargo.toml
bpfjailer-common/src/: lib.rs  policy.rs  types.rs
bpfjailer-daemon/: Cargo.toml
bpfjailer-daemon/src/: bpf_loader.rs  enrollment.rs  enrollment_alternatives.rs  main.rs  path_matcher.rs  policy.rs  process_tracker.rs  signed_binary.rs
config/: bpfjailer-bootstrap.service  bpfjailer-daemon.service  policy.json
examples/: Cargo.toml  simple_enroll.rs
examples/docker/: Dockerfile.bpfjailer  README.md  docker-compose.yml  policy.json
examples/docker/agent/: agent.py
test/: integration_test.sh  test_jailing.py
test_task_storage/: Cargo.toml  README.md  TEST_RESULTS.md  build.rs
test_task_storage/src/: lib.rs  main.bpf.c  main.rs
tests/: requirements.txt
tests/docker/: test_container_enrollment.sh  test_proxy_enforcement.sh
tests/nginx/: nginx.conf  nginx.py  nginx_allow.conf  nginx_blocked.conf  run_test.sh
tests/qemu/: README.md  run_test.sh  run_test_headless.sh  setup_vm.sh  test_enrollment.sh  test_restrictions.sh
tests/vulnerable_apps/: README.md  ai_agent_egress.py  ai_agent_secrets.py  arbitrary_write.py  (+11 more)
