[package]
name = "bpfjailer-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_enroll"
path = "simple_enroll.rs"

[dependencies]
bpfjailer-client = { path = "../bpfjailer-client" }
bpfjailer-common = { path = "../bpfjailer-common" }
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.11"
